jsinterop-ts-defs-test/src/test/resources/errors/ctors/JsTypeWithMultipleNoneAnnotatedConstructors.java
package com.vertispan.tsdefs.tests.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithMultipleNoneAnnotatedConstructors {

    public JsTypeWithMultipleNoneAnnotatedConstructors(){
    }

    public JsTypeWithMultipleNoneAnnotatedConstructors(String lastName) {
    }
}